--- a/Frontend/src/styles/AssetDetailsModal.css
+++ b/Frontend/src/styles/AssetDetailsModal.css
@@ -14,27 +14,29 @@
 .assets-modal-content {
     background-color: var(--bg-menu-color);
     border-radius: 8px 0 0 8px;
-    padding: 20px 30px;
-    width: 35%;
+    width: 40%;
     max-width: none;
     height: 100%;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
     color: var(--text-color);
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
-.modal-header {
+.asset-modal-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
     padding-bottom: 15px;
     border-bottom: 1px solid var(--border--color);
+    padding-left: 30px;   /* <-- ДОБАВЬ ЭТУ СТРОКУ */
+    padding-right: 30px;  /* <-- ДОБАВЬ ЭТУ СТРОКУ */
+    padding-top: 20px;
 }
 
-.modal-header h2 {
+.asset-modal-header h2 {
     margin: 0;
     font-size: 20px;
     font-weight: 600;
@@ -76,9 +78,9 @@
 }
 
 .modal-body1 {
-    padding: 0;
     flex-grow: 1;
     overflow-y: auto;
+    padding: 0 30px;
 }
 
 .modal-section {
