--- a/Frontend/src/components/AccessSettings/AccessSettings.css
+++ b/Frontend/src/components/AccessSettings/AccessSettings.css
@@ -14,6 +14,7 @@
 .access-header-container {
     display: flex;
     align-items: stretch;
+    justify-content: space-between;
     margin-bottom: 20px;
     padding: 0 0;
     position: relative;
@@ -99,6 +100,7 @@
     height: 60px;
     text-transform: uppercase;
     font-size: 16px;
+    border-left: 1px solid var(--border--color);
 }
 
 .access-button:hover {
@@ -107,9 +109,8 @@
 
 .access-table-container {
     background-color: var(--container-bg);
-    border-radius: 8px;
     overflow: hidden;
-    border: 1px solid var(--border--color);
+    border: 1px solid var(--bg-color);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -132,36 +133,20 @@
     font-weight: 600;
     color: var(--text-color);
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: var(--font-size-table-header);
     letter-spacing: 0.5px;
-    border-bottom: 1px solid var(--border--color);
+    border-bottom: 1px solid var(--bg-color);
     vertical-align: middle;
 }
 
-/* Специальные ширины для основных колонок */
-.access-table th:nth-child(1) {
-    /* ИМЯ */
-    width: 150px;
-}
-
-.access-table th:nth-child(2) {
-    /* РОЛЬ */
-    width: 100px;
-}
-
-.access-table th:nth-child(3) {
-    /* EMAIL */
-    width: 250px;
-}
 
 .access-table td {
     padding: 8px 6px;
     color: var(--text-color);
     border-bottom: 1px solid var(--border--color);
     vertical-align: middle;
-    font-size: 12px;
+    font-size: var(--font-size-table-text);
     text-align: center;
-    /* Выравнивание содержимого ячеек по центру */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -260,7 +245,7 @@
 }
 
 .module-name {
-    font-size: 11px;
+    font-size: var(--font-size-table-header);
     font-weight: 600;
     text-align: center;
     line-height: 1.1;
